...
                Slider(value: $settings.soundVolume, in: 0...1)
                    .onChange(of: settings.soundVolume) { _, newValue in
                        SoundManager.shared.setMusicVolume(Float(newValue))
                    }
            }

            Button("Done") { dismiss() }
        }
    }
}


